feat: add usage instructions to .env.test.local.example

--- a/.env.test.local.example
+++ b/.env.test.local.example
@@ -1,5 +1,8 @@
 # Integration Test API Keys
 # Copy this file to .env.test.local and fill in the keys for providers you want to test
+#
+# Usage:
+#   source .env.test.local && RUN_INTEGRATION=true bundle exec rspec spec/integration/
 
 # OpenAI (required for most tests)
 OPENAI_API_KEY=sk-...
